# lemmy-client-rs

./: .woodpecker.yml  Cargo.toml  README.md  cliff.toml
src/: client_options.rs  endpoint_methods.rs  endpoints.rs  error.rs  form.rs  forms.rs  lemmy_client.rs  lemmy_client_endpoint_impls.rs  lemmy_client_internal.rs  lemmy_client_trait.rs  lemmy_request.rs  lib.rs  macros.rs  response.rs  utils.rs
src/endpoints/: account.rs  admin.rs  comment.rs  community.rs  emoji.rs  mod.rs  oauth.rs  person.rs  post.rs  private_message.rs  report.rs  site.rs  tag.rs
