[package]
name = "lemmy-client"
version = "1.0.2"
edition = "2021"
license = "AGPL-3.0"
authors = ["SleeplessOne1917"]
description = "A Rust HTTP client for Lemmy."
homepage = "https://join-lemmy.org"
repository = "https://github.com/LemmyNet/lemmy-client-rs"
keywords = ["Lemmy", "HTTP-client", "API-wrapper", "fediverse"]
categories = ["api-bindings", "wasm"]

[dependencies]
cfg-if = "1.0.0"
http = "1.1"
lemmy_api_common = "=0.19.5"
serde = "1.0"
leptos = { version = "0.6", optional = true }
serde_json = "1.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
leptos = ["web-sys/AbortController", "dep:leptos"]

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = { version = "0.5", features = ["http"] }
serde_urlencoded = "0.7"
web-sys = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
