[package]
name = "lemmy-client"
version = "1.0.5"
edition = "2024"
license = "AGPL-3.0"
authors = ["SleeplessOne1917"]
description = "A Rust HTTP client for Lemmy."
homepage = "https://join-lemmy.org"
repository = "https://github.com/LemmyNet/lemmy-client-rs"
keywords = ["Lemmy", "HTTP-client", "API-wrapper", "fediverse"]
categories = ["api-bindings", "wasm"]

[dependencies]
cfg-if = "1"
http = "1.3"
lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy", branch = "main" }
serde = "1.0"
serde_json = "1.0"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
serde_urlencoded = "0.7"
wasm-bindgen = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
